syntax = "proto3";

package auth.proto;

option go_package = "auth/proto";

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 userID = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message AuthenticateRequest {
    string token = 1;
}

message AuthenticateResponse {
    int64 userID = 1;
}
